--- a/AWS/deploy_ec2_instance.yml
+++ b/AWS/deploy_ec2_instance.yml
@@ -1,6 +1,6 @@
 ---
 - name: Deploy EC2 instance
-  hosts: localhost
+  hosts: local
   connection: local
   gather_facts: False
   
@@ -50,5 +50,17 @@
       group: NewWebServer
       vpc_subnet_id: "{{ aws_subnet_id }}"
       assign_public_ip: yes
-      
-         
+    register: ec2
+
+  - name: Add new EC2 server to inventory
+    add_host:
+      name: "{{ item.public_ip }}"
+      groups: webservers 
+    with_items: "{{ ec2.instances }}"
+
+  - name: Wait for SSH to come up on instance
+    wait_for:
+      host: "{{ item.public_ip }}"
+      port: 22
+      state: started
+    with_items: "{{ ec2.instances }}"         
