moved credentials to hidden file

--- a/AWS/CreateVPC/main.yml
+++ b/AWS/CreateVPC/main.yml
@@ -2,6 +2,8 @@
 # Run VPC creation tasks
 
 - hosts: local
+  vars_files:
+    credentials.yml
   environment:
     AWS_ACCESS_KEY_ID: "{{ aws_access_key }}"
     AWS_SECRET_ACCESS_KEY: "{{ aws_secret_key }}"
