--- a/AWS/CreateVPC/tasks/vpc_setup.yml
+++ b/AWS/CreateVPC/tasks/vpc_setup.yml
@@ -7,21 +7,49 @@
     region: "{{ aws_region }}"
   register: vpc_details
 
-# Create public subnet
-- name: Creating public subnet
+# Create public subnet AZ-1
+- name: Creating public subnet on first AZ
   ec2_vpc_subnet:
     state: present
     vpc_id: "{{ vpc_details.vpc.id }}"
-    cidr: "{{ pub_subnet_cidr }}"
-  register: pub_subnet_details
+    az: "{{ aws_az_1 }}"
+    cidr: "{{ pub_sub_az_1_cidr }}"
+    resource_tags:
+      Name: "{{ pub_sub_az_1_name }}"
+  register: pub_sub_az_1_details
 
-# Create private subnet
-- name: Creating private subnet
+# Create public subnet AZ-2
+- name: Creating public subnet on second AZ
   ec2_vpc_subnet:
     state: present
     vpc_id: "{{ vpc_details.vpc.id }}"
-    cidr: "{{ priv_subnet_cidr }}"
-  register: priv_subnet_details
+    az: "{{ aws_az_2 }}"
+    cidr: "{{ pub_sub_az_2_cidr }}"
+    resource_tags:
+      Name: "{{ pub_sub_az_2_name }}"
+  register: pub_sub_az_2_details
+
+# Create private subnet AZ-1
+- name: Creating private subnet on first AZ
+  ec2_vpc_subnet:
+    state: present
+    vpc_id: "{{ vpc_details.vpc.id }}"
+    az: "{{ aws_az_1 }}"
+    cidr: "{{ priv_sub_az_1_cidr }}"
+    resource_tags:
+      Name: "{{ priv_sub_az_1_name }}"
+  register: priv_sub_az_1_details
+
+# Create private subnet AZ-2
+- name: Creating private subnet on second AZ
+  ec2_vpc_subnet:
+    state: present
+    vpc_id: "{{ vpc_details.vpc.id }}"
+    az: "{{ aws_az_2 }}"
+    cidr: "{{ priv_sub_az_2_cidr }}"
+    resource_tags:
+      Name: "{{ priv_sub_az_2_name }}"
+  register: priv_sub_az_2_details
 
 # Creating initial security group
 - name: Creating initial server security group
@@ -68,8 +96,10 @@
     vpc_id: "{{ vpc_details.vpc.id }}"
     region: "{{ aws_region }}"
     tags:
-      Name: PublicSubnet
-    subnets: "{{ pub_subnet_details.subnet.id }}"
+      Name: PublicSubnets
+    subnets: 
+      - "{{ pub_sub_az_1_details.subnet.id }}"
+      - "{{ pub_sub_az_2_details.subnet.id }}"
     routes:
       - dest: 0.0.0.0/0
         gateway_id: "{{ igw_details.gateway_id }}"
@@ -80,8 +110,10 @@
     vpc_id: "{{ vpc_details.vpc.id }}"
     region: "{{ aws_region }}"
     tags:
-      Name: PrivateSubnet
-    subnets: "{{ priv_subnet_details.subnet.id }}"
+      Name: PrivateSubnets
+    subnets: 
+      - "{{ priv_sub_az_1_details.subnet.id }}"
+      - "{{ priv_sub_az_2_details.subnet.id }}"
     routes:
       - dest: 10.0.0.0/16
         gateway_id: local
@@ -92,12 +124,17 @@
     vpc_id: "{{ vpc_details.vpc.id }}"
     name: vpc_nacl
     region: "{{ aws_region }}" 
-    subnets: ["{{ pub_subnet_details.subnet.id }}", "{{ priv_subnet_details.subnet.id }}"]
+    subnets: [
+        "{{ pub_sub_az_1_details.subnet.id }}", 
+        "{{ pub_sub_az_2_details.subnet.id }}",
+        "{{ priv_sub_az_1_details.subnet.id }}", 
+        "{{ priv_sub_az_2_details.subnet.id }}"
+    ]
     ingress: [
         [100, 'tcp', 'allow', '0.0.0.0/0', null, null, 22, 22],
         [200, 'tcp', 'allow', '0.0.0.0/0', null, null, "{{ aws_prod_sg_ssh_port }}", "{{ aws_prod_sg_ssh_port }}"],
         [300, 'tcp', 'allow', '0.0.0.0/0', null, null, 80, 80],
-        [400, 'tcp', 'allow', '0.0.0.0/0', null, null, 443, 443],
+        [400, 'tcp', 'allow', '0.0.0.0/0', null, null, 443, 443]
     ]
     egress: [
         [100, 'all', 'allow', '0.0.0.0/0', null, null, null, null]
