--- a/AWS/CreateVPC/group_vars/all.yml
+++ b/AWS/CreateVPC/group_vars/all.yml
@@ -8,7 +8,8 @@ aws_az_2: us-west-1c
 
 vpc_name: AnsibleVPC
 
-internet_cidr_block: 0.0.0.0/16
+inet_range: 0.0.0.0/0
+ssh_range: 0.0.0.0/0
 vpc_cidr_block: 10.0.0.0/16
 
 pub_sub_az_1_name: Public1a
