--- a/AWS/CreateVPC/tasks/vpc_setup.yml
+++ b/AWS/CreateVPC/tasks/vpc_setup.yml
@@ -61,7 +61,7 @@
       - proto: tcp
         from_port: 22
         to_port: 22
-        cidr_ip: "{{ internet_cidr_block }}"
+        cidr_ip: "{{ ssh_range }}"
 
 # Creating production server security group
 - name: Creating production server security group
@@ -73,15 +73,15 @@
       - proto: tcp
         from_port: "{{ aws_prod_sg_ssh_port }}"
         to_port: "{{ aws_prod_sg_ssh_port }}"
-        cidr_ip: "{{ internet_cidr_block }}"
+        cidr_ip: "{{ ssh_range }}"
       - proto: tcp
         from_port: 80
         to_port: 80
-        cidr_ip: "{{ internet_cidr_block }}"
+        cidr_ip: "{{ inet_range }}"
       - proto: tcp
         from_port: 443
         to_port: 443
-        cidr_ip: "{{ internet_cidr_block }}"
+        cidr_ip: "{{ inet_range }}"
 
 # Creating internet gateway
 - name: Creating internet gateway
@@ -101,7 +101,7 @@
       - "{{ pub_sub_az_1_details.subnet.id }}"
       - "{{ pub_sub_az_2_details.subnet.id }}"
     routes:
-      - dest: "{{ internet_cidr_block }}"
+      - dest: "{{ inet_range }}"
         gateway_id: "{{ igw_details.gateway_id }}"
 
 # Create route table for private subnet
@@ -131,13 +131,13 @@
         "{{ priv_sub_az_2_details.subnet.id }}"
     ]
     ingress: [
-        [100, 'tcp', 'allow', "{{ internet_cidr_block }}", null, null, 22, 22],
-        [200, 'tcp', 'allow', "{{ internet_cidr_block }}", null, null, "{{ aws_prod_sg_ssh_port }}", "{{ aws_prod_sg_ssh_port }}"],
-        [300, 'tcp', 'allow', "{{ internet_cidr_block }}", null, null, 80, 80],
-        [400, 'tcp', 'allow', "{{ internet_cidr_block }}", null, null, 443, 443]
+        [100, 'tcp', 'allow', "{{ ssh_range }}", null, null, 22, 22],
+        [200, 'tcp', 'allow', "{{ ssh_range }}", null, null, "{{ aws_prod_sg_ssh_port }}", "{{ aws_prod_sg_ssh_port }}"],
+        [300, 'tcp', 'allow', "{{ inet_range }}", null, null, 80, 80],
+        [400, 'tcp', 'allow', "{{ inet_range }}", null, null, 443, 443]
     ]
     egress: [
-        [100, 'all', 'allow', "{{ internet_cidr_block }}", null, null, null, null]
+        [100, 'all', 'allow', "{{ inet_range }}", null, null, null, null]
     ]
     state: 'present'
 
