straightened up vars a bit, added tags

--- a/AWS/CreateVPC/main.yml
+++ b/AWS/CreateVPC/main.yml
@@ -7,6 +7,6 @@
   environment:
     AWS_ACCESS_KEY_ID: "{{ aws_access_key }}"
     AWS_SECRET_ACCESS_KEY: "{{ aws_secret_key }}"
-    AWS_REGION: "{{ aws_region }}"
+    AWS_REGION: "{{ vpc.region }}"
   tasks:
     - include_tasks: tasks/vpc_setup.yml
