--- a/AWS/CreateVPC/group_vars/all.yml
+++ b/AWS/CreateVPC/group_vars/all.yml
@@ -1,27 +1,37 @@
 # Don't run over SSH
 ansible_connection: local
 
+#UserName
+
+creator: AnsibleUser
+
 # VPC Details
-aws_region: us-west-1
-aws_az_1: us-west-1a
-aws_az_2: us-west-1c
-vpc_name: AnsibleVPC
-vpc_cidr_block: 10.0.0.0/16
+vpc:
+  name: AnsibleVPC
+  region: us-west-1
+  az_1: us-west-1a
+  az_2: us-west-1c
+  cidr: 10.0.0.0/16
 
-# Subnet details
+#### Subnet details
+
 # Public subnets
-pub_sub_az_1_name: Public1a
-pub_sub_az_1_cidr: 10.0.0.0/24
+pub_sub_az_1:
+  name: Public1a
+  cidr: 10.0.0.0/24
 
-pub_sub_az_2_name: Public1c
-pub_sub_az_2_cidr: 10.0.1.0/24
+pub_sub_az_2: 
+  name: Public1c
+  cidr: 10.0.1.0/24
 
 # Private subnets
-priv_sub_az_1_name: Private1a
-priv_sub_az_1_cidr: 10.0.128.0/24
+priv_sub_az_1:
+  name: Private1a
+  cidr: 10.0.128.0/24
 
-priv_sub_az_2_name: Private1c
-priv_sub_az_2_cidr: 10.0.129.0/24
+priv_sub_az_2:
+  name: Private1c
+  cidr: 10.0.129.0/24
 
 # IP ranges
 inet_range: 0.0.0.0/0
@@ -35,3 +45,5 @@ aws_prod_sg_name: PublicServersProd
 aws_prod_sg_description: allow HTTP, HTTPS, non-default SSH
 aws_prod_sg_ssh_port: 2666
 
+#IGW
+igw_name: InternetGateway
